GearsetPOC/force-app/main/default/objects/S3Settings__c/S3Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the S3 API Used in S3PassengerAPIService</description>
    <label>S3Settings</label>
</CustomObject>