GearsetPOC/force-app/main/default/objects/S3Settings__c/fields/authBody__c.field-meta.xml
<CustomField>
    <fullName>authBody__c</fullName>
    <label>authBody</label>
    <length>255</length>
    <type>Text</type>
</CustomField>