GearsetPOC/force-app/main/default/objects/S3Settings__c/fields/authEndpoint__c.field-meta.xml
<CustomField>
    <fullName>authEndpoint__c</fullName>
    <label>authEndpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>