GearsetPOC/force-app/main/default/objects/S3Settings__c/fields/authHeaders__c.field-meta.xml
<CustomField>
    <fullName>authHeaders__c</fullName>
    <label>authHeaders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>