GearsetPOC/force-app/main/default/objects/S3Settings__c/fields/authMethod__c.field-meta.xml
<CustomField>
    <fullName>authMethod__c</fullName>
    <label>authMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>