GearsetPOC/force-app/main/default/objects/S3Settings__c/fields/profileAuthTokenPlaceholder__c.field-meta.xml
<CustomField>
    <fullName>profileAuthTokenPlaceholder__c</fullName>
    <label>profileAuthTokenPlaceholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>