GearsetPOC/force-app/main/default/objects/S3Settings__c/fields/profileHeaders__c.field-meta.xml
<CustomField>
    <fullName>profileHeaders__c</fullName>
    <label>profileHeaders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>