GearsetPOC/force-app/main/default/objects/S3Settings__c/fields/profileMethod__c.field-meta.xml
<CustomField>
    <fullName>profileMethod__c</fullName>
    <label>profileMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>