GearsetPOC/force-app/main/default/objects/S3Settings__c/fields/profilesEndpoint__c.field-meta.xml
<CustomField>
    <fullName>profilesEndpoint__c</fullName>
    <label>profilesEndpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>